--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,20 +6,35 @@
     <title>AI Assistant</title>
   </head>
   <style>
+    html,
     body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; /* hide default scrollbar */
     }
+
     #root {
-      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      overflow: auto; /* allow scrolling */
+      -ms-overflow-style: none; /* IE & Edge */
+      scrollbar-width: none; /* Firefox */
     }
+
+    /* Chrome, Safari, Opera */
+    #root::-webkit-scrollbar {
+      display: none;
+    }
+
     canvas {
       width: 100%;
       height: 100%;
       display: block;
     }
   </style>
+
   <body>
     <div id="root"></div>
     <script src="/live2dcubismcore.min.js"></script>
